# UCLM

./: .gitignore  Aprender-C.code-workspace  README.md  about.html  contact.html  est.html  index.html  mp.html  music.html  pctr.html  script.sh  subject.html
AMP/Arquitectura de procesos/: Empresa de consultoría.docx
API/: 3.6.drawio  ParraRufoAlvaro_ejercicio3.6.xlsx  s03-ejercicio-3.6.xlsx  s03-ejercicios-resueltos-3.1.xlsx
API/Lab1-Project/: Project1.mpp  Práctica 1.odt
ISO-1/: Alumno.java  Aplicacion.java  Documentacion.java  Empresa.java  GestorAplicacion.java  GestorDocumentacion.java  GestorOferta.java  GestorPerfil.java  GestorReferencia.java  GestorRegistro.java  NetJobs.vpp.bak_003d  NetJobs.vpp.bak_004d  NetJobs.vpp.bak_005d  NetJobs.vpp.bak_009d  NetJobs.vpp.bak_010d  NetJobs.vpp.bak_014d  NetJobs.vpp.bak_016d  NetJobs.vpp.bak_018d  NetJobs.vpp.bak_021d  NetJobs.vpp.bak_025d  NetJobs.vpp.bak_027d  NetJobs.vux  Oferta.java  Profesor.java  README.md  Referencia.java  UI_AplicacionEmpleo.java  UI_ConsultarOfertas.java  UI_ConsultarReferencias.java  UI_Documentacion.java  UI_DocumentacionAlumno.java  UI_DocumentacionEmpresa.java  UI_DocumentacionProfesor.java  UI_Oferta.java  UI_Perfil.java  UI_Referencia.java  Usuario.java
ProgramacionConcurrenteTiempoReal/: docu.docx
ProgramacionConcurrenteTiempoReal/Laboratorio/Practica1.2/Practica1.2/src/: CMakeLists.txt  contador.c  lista.c  manager.c  manager.h  procesador.c
configuracionesDocker/: installDocker.sh  installDockerCompose.sh
css/: index copy.css  index.css
js/: music.js
ubicuos/: README.md
(+365 files in other folders)
